# alertswisscap

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  alembic.ini  pyproject.toml
.github/: spell-ignore-words.txt
alembic/: env.py
alembic/versions/: 16786c02b33a_add_shapes.py  255f65c142b3_create_tables.py  56715f4c6ac8_create_tables.py  848ed0279ed8_add_tables.py  93a87e9850d8_create_geocodes_stuff.py  97cfd2ae0eb1_add_tables.py  b4d62b001ade_add_canton_lookup_table.py  be3abefbd921_add_tables.py  c8314aa90324_create_schema.py  cc756c5eec19_initial.py  dcd953748674_create_tables.py  df85f32342e4_create_views.py  f0ace6c7445b_create_views.py  f428e9bb1bb2_add_tables.py  fa57a32341d1_create_schema.py  ff058a741286_add_tables.py
alertswisscap/: loader.py
alertswisscap/apiclient/: client.py
alertswisscap/controller/: pgcontroller.py
alertswisscap/model/: geometries.py
alertswisscap/model/orm/: AlertsORM.py  cap.py
doc/: alertswisscap.graphml
tests/examples/: v1.json  v2_all.json  v2_public.json  v2_restricted.json
