[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "alertswisscap"
version = "0.1.0"
description = ""
authors = ["Andrea Borghi <andrea.borghi@camptocamp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
capparselib = "^0.6.6"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.14.2"
shapely = "^2.0.2"

[tool.poetry.scripts]
alertswiss-client = "alertswisscap.loader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
